@@ -65,6 +65,7 @@
 - fix next task list update.
 - fix fix direct map not updating on re-read.
 - include ip address in debug logging.
+- mount using address for DNS round robin host names.
 
 03/09/2009 autofs-5.0.5
 -----------------------
